# google-patents-fetcher

./: .gitignore  README.rst  demo.sh  patent_fetcher.py  pyproject.toml  test.html
src/google_patents_scraper/: fetch.py  main.py  parse.py  scrape.py
src/patent_fetcher/: fetch.py  main.py  parse.py  scrape.py
