[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "patent_fetcher"
version = "0.0.0"

dependencies = [
    "selenium",
    "beautifulsoup4",
    "rich",
]

[project.scripts]
patent_fetcher = "patent_fetcher.main:main"

[tool.hatch.envs.style]
dependencies = ["isort", "black", "pylama", "mypy", "types-beautifulsoup4"]

[tool.hatch.envs.style.scripts]
format = [
       "isort --color src",
       "black src",
]

check = [
      "pylama --ignore E203 src", # E203 is not pep8-compliant, and black breaks it
      "mypy --strict --pretty src",
] 
all = [
    "format",
    "check",
]